worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: [IMAGE_NAME]
          volumeMounts:
            - name: app-secrets
              mountPath: /app-secrets
              readOnly: true
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=[INSTANCE_CONNECTION_NAME]=tcp:5432",
                    "-credential_file=/cloudsql-secrets/credentials.json"]
          volumeMounts:
            - name: cloudsql-secrets
              mountPath: /cloudsql-secrets
              readOnly: true
      volumes:
        - name: app-secrets
          secret:
            secretName: app-secrets
        - name: cloudsql-secrets
          secret:
            secretName: cloudsql-secrets
