ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: [STATIC_IP_NAME]
spec:
  # tls:
  #   - secretName: ingress-secrets
  backend:
    serviceName: web-service
    servicePort: 3000
